[network] Fix alignment of network throttling title column.
Screenshot: https://imgur.com/rSDQMAP.png
Fixed: 330806161
Bug: 41175925
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5563584
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Wolfgang Beyer <wolfi@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/panels/mobile_throttling/throttlingSettingsTab.css
+++ b/front_end/panels/mobile_throttling/throttlingSettingsTab.css
@@ -61,10 +61,6 @@
   flex: auto;
 }
 
-.conditions-list-title-text:last-child {
-  text-align: center;
-}
-
 .conditions-list-separator {
   flex: 0 0 1px;
   background-color: var(--sys-color-divider);
